# simple-flask-api

./: Dockerfile  README.md  config.py  pyproject.toml  run.py
.github/workflows/: python-app.yml
flask_api/: __init__.py  dog.db
flask_api/dog_api/: __init__.py  dog.py  routes.py
flask_api/entities/: dog.py
static/: openapi.json
template/: swaggerui.html
